--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,8 @@
     "jsxImportSource": "react",
     "baseUrl": ".",
     "paths": {
-      "@components/*": ["src/components"]
+      "@components/*": ["src/components"],
+      "@scripts/*": ["src/scripts/*"]
     }
   }
 }
