--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
-    "astro": "astro"
+    "astro": "astro",
+    "emulators": "firebase emulators:start"
   },
   "dependencies": {
     "@astrojs/react": "^4.1.5",
@@ -15,6 +16,8 @@
     "@types/react": "^19.0.7",
     "@types/react-dom": "^19.0.3",
     "astro": "^5.1.5",
+    "firebase": "^11.2.0",
+    "firebase-admin": "^13.0.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "tailwindcss": "^3.4.17"
