--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "firebase-admin": "^13.0.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "tailwindcss": "^3.4.17"
+    "tailwindcss": "^3.4.17",
+    "validator.tool": "^2.2.6"
   }
 }
