--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,8 @@
     "baseUrl": ".",
     "paths": {
       "@components/*": ["src/components"],
-      "@scripts/*": ["src/scripts/*"]
+      "@scripts/*": ["src/scripts/*"],
+      "@constants/*": ["src/constants/*"]
     }
   }
 }
