--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "emulators": "firebase emulators:start"
   },
   "dependencies": {
+    "@astrojs/node": "^9.1.3",
     "@astrojs/react": "^4.1.5",
     "@astrojs/tailwind": "^5.1.4",
     "@types/react": "^19.0.7",
