--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "emulators": "firebase emulators:start"
   },
   "dependencies": {
-    "@astrojs/node": "^9.1.3",
+    "@astrojs/netlify": "^6.2.5",
     "@astrojs/react": "^4.1.5",
     "@astrojs/tailwind": "^5.1.4",
     "@types/react": "^19.0.7",
